@@ -18,3 +18,4 @@ New internal features:
 - updated isInWorkspace script to take into account also the new Members 
   Workspace portal type
 - Favorites actions are disabled by default (#1248)
+- removed "translate" action from document's workflow (#1347)
